test/tests/stages/14_pointers/invalid_types/pass_pointer_as_int.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(f)
  (
  int
  identifier(i)
  )
  {
  return
  identifier(i)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  ;
  return
  identifier(f)
  (
  &
  identifier(x)
  )
  ;
  }
